adding visual Restaurant Types filter

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 				<input type="number" min="1" max="12" id="maxPlaces" class="form-control" placeholder="# of Places">
 			</div>
 			<div class="input-group">
+				<span class="input-group-addon"><span class="glyphicon glyphicon-cutlery"></span> Types</span>
+				<input type="text" id="typeRestaurant" class="form-control" value="" placeholder="Type of Restaurant">
+			</div>
+			<div class="input-group">
 				<span class="input-group-addon"><span class="glyphicon glyphicon-share"></span> Share link</span>
 				<input type="text" id="shareLink" class="form-control" value="">
 			</div>
