--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- Scripts -->
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzFWdt81gY3Kzk-PHskUW9F0X_eOAYZWY&libraries=places"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnM4OGSqM7nNwL5YXIjJikowkI9fEwXp8&libraries=places"></script>
 	<script type="text/javascript" src="js/map.js"></script>
 	<!-- Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=0.6, maximum-scale=1">
@@ -53,6 +53,7 @@
 		<div class="panel-body">
 			<h2></h2>
 			<p class="vicinity"></p>
+			<p class="rating"></p>
 			<p>
 				<a class="map" target="_blank" href="">View on map</a>
 			</p>
