--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<div class="panel panel-default result" style="display:none;">
 		<div class="panel-body">
 			<h2></h2>
+			<p class="vicinity"></p>
 			<p class="rating"></p>
 			<p>
 				<a class="map" target="_blank" href="">View on map</a>
